package nl.vaneijndhoven.dukes.hazardcounty;

public enum Events {

    STREAMADDED,
    CANNYCONFIG,
    HOUGHLINESCONFIG,
    LANEDETECTION,
    STARTLIGHTDETECTION

}
